unpackaged/main/default/objects/Redecision_Request__c/Redecision_Request__c.object-meta.xml
<CustomObject>
    <label>Redecision Request</label>
    <nameField>
        <displayFormat>RR-{00000000}</displayFormat>
        <label>Redecision Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redecision Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>