unpackaged/main/default/objects/Redecision_Request__c/fields/lead_guid__c.field-meta.xml
<CustomField>
    <fullName>lead_guid__c</fullName>
    <formula>Application__r.Lead_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lead_guid</label>
    <type>Text</type>
</CustomField>