unpackaged/main/default/objects/Redecision_Request__c/fields/lead_id__c.field-meta.xml
<CustomField>
    <fullName>lead_id__c</fullName>
    <formula>Application__r.LEAD_ID_ExtKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lead_id</label>
    <type>Text</type>
</CustomField>