unpackaged/main/default/objects/Redecision_Request__c/fields/member_id__c.field-meta.xml
<CustomField>
    <fullName>member_id__c</fullName>
    <formula>Application__r.genesis__Account__r.Member_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>member_id</label>
    <type>Text</type>
</CustomField>