unpackaged/main/default/objects/Redecision_Request__c/fields/Triggered_From__c.field-meta.xml
<CustomField>
    <fullName>Triggered_From__c</fullName>
    <label>Triggered From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>